Fixed gallery img wrap

--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ header p{
     display: flex;
     gap: 10px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .gallery > img {
